Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-115940

Surfacegraph picking resample crash

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.6.0 Beta3, 6.7.0 FF
    • 6.6
    • Graphs: 3D
    • None
    • cf06174f7 (dev), 1c375ad7c (6.6)

      The Surfacegallery Oscilloscope demo crashes when resampling after picking a high index point.

      Steps to reproduce: 

      • go to Oscilloscope
      • turn samples up
      • pick a point in the top right corner
      • turn samples down

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            oulu_hillbilly Sami Varanka
            spouke Sakaria Pouke
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes