Fix surfacegraph crash while picking and downsampling

This fix also reorganizes some code so that the updateModel function is called
before UpdateSelectedPoint.

Fixes: QTBUG-115940
Change-Id: Ie7611936691c28bcb5257e2fac7e175c796a96f4
Reviewed-by: Dilek Akcay <dilek.akcay@qt.io>
Reviewed-by: Jere Tuliniemi <jere.tuliniemi@qt.io>
Reviewed-by: Kwanghyo Park <kwanghyo.park@qt.io>
(cherry picked from commit cf06174f70e54e95e6ee6327b99c366eae7024b2)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>